<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/transparent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/shape_white_bkg_app_border"
        android:orientation="vertical" >

        <RelativeLayout
            android:id="@+id/search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:onClick="onClick"
            android:padding="5dp" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:gravity="left|center_vertical"
                android:text="@string/search"
                android:textColor="@android:color/black"
                android:textSize="12sp" />

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_alignParentRight="true"
                android:contentDescription="@string/app_name"
                android:scaleType="centerInside"
                android:src="@drawable/enter" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#E0E0E0" />

        <RelativeLayout
            android:id="@+id/alterSkin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:onClick="onClick"
            android:padding="5dp" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:gravity="left|center_vertical"
                android:text="@string/alterSkin"
                android:textColor="@android:color/black"
                android:textSize="12sp" />

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_alignParentRight="true"
                android:contentDescription="@string/app_name"
                android:scaleType="centerInside"
                android:src="@drawable/enter" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#E0E0E0" />

        <RelativeLayout
            android:id="@+id/sao"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:onClick="onClick"
            android:padding="5dp" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:gravity="left|center_vertical"
                android:text="@string/sao"
                android:textColor="@android:color/black"
                android:textSize="12sp" />

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_alignParentRight="true"
                android:contentDescription="@string/app_name"
                android:scaleType="centerInside"
                android:src="@drawable/enter" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#E0E0E0" />

        <RelativeLayout
            android:id="@+id/isLock"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:gravity="left|center_vertical"
                android:text="@string/lockScan"
                android:textColor="@android:color/black"
                android:textSize="12sp" />

            <CheckBox
                android:id="@+id/lockCheck"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:clickable="false"
                android:focusable="false"
                android:gravity="center"
                android:button="@drawable/checkbox_on"
                android:onClick="onClick" />
        </RelativeLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#E0E0E0" />

        <RelativeLayout
            android:id="@+id/isShaker"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:gravity="left|center_vertical"
                android:text="@string/shaker"
                android:textColor="@android:color/black"
                android:textSize="12sp" />

            <CheckBox
                android:id="@+id/shakerCheck"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:clickable="false"
                android:focusable="false"
                android:gravity="center"
                android:button="@drawable/checkbox_off"
                android:onClick="onClick" />
        </RelativeLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#E0E0E0" />

        <RelativeLayout
            android:id="@+id/isNight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:gravity="left|center_vertical"
                android:text="@string/nightMode"
                android:textColor="@android:color/black"
                android:textSize="12sp" />

            <CheckBox
                android:id="@+id/nightCheck"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:clickable="false"
                android:focusable="false"
                android:gravity="center"
                android:button="@drawable/checkbox_off"
                android:onClick="onClick" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#E0E0E0" />

        <RelativeLayout
            android:id="@+id/isSleep"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:gravity="left|center_vertical"
                android:text="@string/sleepTime"
                android:textColor="@android:color/black"
                android:textSize="12sp" />

            <CheckBox
                android:id="@+id/sleepCheck"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:clickable="false"
                android:focusable="false"
                android:gravity="center"
                android:button="@drawable/checkbox_off"
                android:onClick="onClick" />
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:orientation="vertical" >

        <Button
            android:id="@+id/clearCache"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/shape_white_bkg_app_border"
            android:onClick="onClick"
            android:text="@string/clearCache"
            android:textColor="@android:color/holo_orange_light" />

        <Button
            android:id="@+id/exit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/shape_white_bkg_app_border"
            android:onClick="onClick"
            android:text="@string/exit"
            android:textColor="@android:color/holo_red_light" />
    </LinearLayout>

</RelativeLayout>