<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:orientation="horizontal"
        android:paddingLeft="50dp"
        android:paddingRight="50dp">

        <Button
            android:id="@+id/all"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/shape_app_color"
            android:onClick="onClick"
            android:text="@string/all"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/liked"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/shape_app"
            android:onClick="onClick"
            android:text="@string/liked"
            android:textColor="@color/black" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">

        <TextView
            android:id="@+id/play4list"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:layout_alignParentLeft="true"
            android:onClick="onClick"
            android:text="全部播放"
            android:textSize="15sp"
            android:textColor="@color/app_color" />
        <TextView
            android:id="@+id/muido"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:layout_alignParentRight="true"
            android:onClick="onClick"
            android:text="@string/muido"
            android:textSize="15sp"
            android:textColor="@color/app_color" />
    </RelativeLayout>

    <ListView
        android:id="@+id/musicListView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:scrollbars="none"/>

</LinearLayout>