<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:background="@android:color/transparent" >

    <RelativeLayout
        android:id="@+id/toplayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <CheckBox
            android:id="@+id/allCheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="10dp"
            android:button="@drawable/checkbox_selector"
            android:text="@string/allselect"
            android:textColor="@android:color/black" />

        <TextView
            android:id="@+id/info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:padding="2dp"
            android:textColor="@android:color/black" />
    </RelativeLayout>

    <ListView
        android:id="@+id/listView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/toplayout"
        android:layout_marginBottom="50dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center|center_vertical"
        android:orientation="horizontal"
        android:padding="5dp" >

        <TextView
            android:id="@+id/collect"
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:layout_weight="1"
            android:background="@drawable/shape_red"
            android:clickable="true"
            android:gravity="center|center_vertical"
            android:onClick="onClick"
            android:padding="2dp"
            android:text="@string/collect"
            android:textColor="@android:color/holo_red_light" />

        <TextView
            android:id="@+id/delete"
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:background="@drawable/shape_red"
            android:clickable="true"
            android:gravity="center|center_vertical"
            android:onClick="onClick"
            android:padding="2dp"
            android:text="@string/delete"
            android:textColor="@android:color/holo_red_light" />
    </LinearLayout>

</RelativeLayout>